Horst Schilling in Empfängerliste Kontaktformular eingetragen

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/contact.form.feedback.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/contact.form.feedback.yml
@@ -10,6 +10,7 @@ recipients:
   - info@rufzeichen-online.de
   - lukahoffmann@aol.com
   - nils@familie-baum.net
+  - h.schilling@kabelmail.de
 reply: ''
 weight: 0
 message: 'Ihre Nachricht wurde gesendet.'
