CKEditor Style für Tabellen funktioniert

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/editor.editor.full_html.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/editor.editor.full_html.yml
@@ -54,6 +54,7 @@ settings:
           name: 'Block Formatting'
           items:
             - Format
+            - Styles
         -
           name: Tools
           items:
@@ -70,7 +71,7 @@ settings:
     language:
       language_list: un
     stylescombo:
-      styles: ''
+      styles: "table.center-table|Tabelle zentrieren\r\ntable.no-style|Tabelle Format zurücksetzen"
 image_upload:
   status: true
   scheme: public
