--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/editor.editor.basic_html.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/editor.editor.basic_html.yml
@@ -47,6 +47,7 @@ settings:
           name: 'Block Formatting'
           items:
             - Format
+            - Styles
         -
           name: Tools
           items:
@@ -60,10 +61,10 @@ settings:
     drupallink:
       linkit_enabled: true
       linkit_profile: default
-    stylescombo:
-      styles: ''
     language:
       language_list: un
+    stylescombo:
+      styles: "table.center-table|Tabelle zentrieren\r\ntable.no-style|Tabelle Format zurücksetzen"
 image_upload:
   status: true
   scheme: public
