--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.news.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.news.yml
@@ -194,9 +194,6 @@ display:
         row: false
         fields: false
         pager: false
-        use_more: false
-        use_more_always: false
-        use_more_text: false
       row:
         type: fields
         options:
@@ -483,7 +480,7 @@ display:
             max_length: 175
             word_boundary: true
             ellipsis: true
-            more_link: false
+            more_link: true
             more_link_text: ''
             more_link_path: ''
             strip_tags: true
@@ -522,9 +519,6 @@ display:
           items_per_page: 3
           offset: 0
       display_description: ''
-      use_more: false
-      use_more_always: true
-      use_more_text: more
     cache_metadata:
       max-age: -1
       contexts:
