--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.article.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.article.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.article.field_gallery_below_body
     - field.field.node.article.field_image
     - field.field.node.article.field_new_par_various
+    - field.field.node.article.field_new_txt_capt_main_img
     - field.field.node.article.field_tags
     - image.style.thumbnail
     - node.type.article
@@ -27,7 +28,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 3
+    weight: 4
     settings:
       rows: 9
       summary_rows: 3
@@ -36,13 +37,13 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 9
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     region: content
   field_gallery_above_body:
     type: entity_reference_paragraphs
-    weight: 2
+    weight: 3
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -54,7 +55,7 @@ content:
     region: content
   field_gallery_below_body:
     type: entity_reference_paragraphs
-    weight: 5
+    weight: 6
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -74,7 +75,7 @@ content:
     region: content
   field_new_par_various:
     type: paragraphs
-    weight: 4
+    weight: 5
     settings:
       title: Absatz
       title_plural: Paragraphs
@@ -95,9 +96,17 @@ content:
         delete_confirmation: false
         split_text: false
     region: content
+  field_new_txt_capt_main_img:
+    weight: 2
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_tags:
     type: entity_reference_autocomplete_tags
-    weight: 7
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -106,14 +115,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 6
+    weight: 7
     settings:
       include_locked: true
     third_party_settings: {  }
     region: content
   node_class:
     type: string_textfield
-    weight: 13
+    weight: 14
     region: content
     settings:
       size: 60
@@ -121,7 +130,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 12
+    weight: 13
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -129,21 +138,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 10
+    weight: 11
     third_party_settings: {  }
     region: content
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 14
+    weight: 15
     third_party_settings: {  }
     region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 11
+    weight: 12
     third_party_settings: {  }
     region: content
   title:
@@ -156,7 +165,7 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 8
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
