--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.article.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.article.default.yml
@@ -9,8 +9,9 @@ dependencies:
     - field.field.node.article.field_gallery_below_body
     - field.field.node.article.field_image
     - field.field.node.article.field_new_par_various
+    - field.field.node.article.field_new_txt_capt_main_img
     - field.field.node.article.field_tags
-    - image.style.large
+    - image.style.inline_full_width
     - node.type.article
   module:
     - entity_reference_revisions
@@ -26,14 +27,14 @@ mode: default
 content:
   body:
     type: text_default
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     label: hidden
     region: content
   field_gallery_above_body:
     type: entity_reference_revisions_entity_view
-    weight: 1
+    weight: 2
     label: visually_hidden
     settings:
       view_mode: default
@@ -42,7 +43,7 @@ content:
     region: content
   field_gallery_below_body:
     type: entity_reference_revisions_entity_view
-    weight: 4
+    weight: 5
     label: visually_hidden
     settings:
       view_mode: default
@@ -53,30 +54,38 @@ content:
     type: image
     weight: 0
     settings:
-      image_style: large
+      image_style: inline_full_width
       image_link: ''
     third_party_settings: {  }
     label: hidden
     region: content
   field_new_par_various:
     type: entity_reference_revisions_entity_view
-    weight: 3
+    weight: 4
     label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
     region: content
+  field_new_txt_capt_main_img:
+    weight: 1
+    label: visually_hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_tags:
     type: entity_reference_label
-    weight: 5
+    weight: 6
     label: above
     settings:
       link: true
     third_party_settings: {  }
     region: content
   links:
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
