--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.news.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/views.view.news.yml
@@ -170,9 +170,6 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
-      use_more: true
-      use_more_always: true
-      use_more_text: 'Alle News »'
     cache_metadata:
       max-age: -1
       contexts:
@@ -197,6 +194,9 @@ display:
         row: false
         fields: false
         pager: false
+        use_more: false
+        use_more_always: false
+        use_more_text: false
       row:
         type: fields
         options:
@@ -271,6 +271,72 @@ display:
           field_api_classes: false
           entity_type: node
           entity_field: created
+          plugin_id: field
+        nid:
+          id: nid
+          table: node_field_data
+          field: nid
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: number_integer
+          settings:
+            thousand_separator: ''
+            prefix_suffix: true
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: node
+          entity_field: nid
           plugin_id: field
         view_node:
           id: view_node
@@ -485,7 +551,7 @@ display:
             ellipsis: true
             more_link: true
             more_link_text: ''
-            more_link_path: ''
+            more_link_path: 'node/{{ nid }}'
             strip_tags: true
             trim: true
             preserve_tags: ''
@@ -522,6 +588,9 @@ display:
           items_per_page: 3
           offset: 0
       display_description: ''
+      use_more: true
+      use_more_always: true
+      use_more_text: 'Alle News »'
     cache_metadata:
       max-age: -1
       contexts:
@@ -549,13 +618,6 @@ display:
         weight: -49
         context: '0'
         menu_name: main
-      use_more: false
-      defaults:
-        use_more: false
-        use_more_always: false
-        use_more_text: false
-      use_more_always: true
-      use_more_text: 'Alle News »'
     cache_metadata:
       max-age: -1
       contexts:
