Node Clone deinstalliert, Quick node clone installiert

--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.extension.yml
@@ -55,12 +55,12 @@ module:
   metatag: 0
   node: 0
   node_class: 0
-  node_clone: 0
   options: 0
   override_node_options: 0
   page_cache: 0
   paragraphs_features: 0
   path: 0
+  quick_node_clone: 0
   quickedit: 0
   rdf: 0
   responsive_image: 0
