--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.turnier.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.node.turnier.default.yml
@@ -34,6 +34,7 @@ third_party_settings:
         id: info-tabs
         classes: ''
       label: Tabellen
+      region: content
 id: node.turnier.default
 targetEntityType: node
 bundle: turnier
