--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/paragraphs.paragraphs_type.gallery_image.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/paragraphs.paragraphs_type.gallery_image.yml
@@ -3,7 +3,7 @@ langcode: de
 status: true
 dependencies: {  }
 id: gallery_image
-label: 'Bild in Bildergalerie'
+label: Bild
 icon_uuid: null
 description: ''
 behavior_plugins: {  }
