--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.paragraph.image_gallery.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_view_display.paragraph.image_gallery.default.yml
@@ -7,29 +7,20 @@ dependencies:
     - field.field.paragraph.image_gallery.field_gallery_images
     - paragraphs.paragraphs_type.image_gallery
   module:
-    - entity_reference_revisions
     - field_collection
 id: paragraph.image_gallery.default
 targetEntityType: paragraph
 bundle: image_gallery
 mode: default
 content:
-  field_gal_image_item:
-    type: entity_reference_revisions_entity_view
-    weight: 0
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    region: content
   field_gallery_images:
     type: field_collection_items
-    weight: 1
+    weight: 0
     region: content
     label: hidden
     settings:
       view_mode: default
       link: false
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  field_gal_image_item: true
