--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "composer/installers": "^1.0.24",
         "wikimedia/composer-merge-plugin": "^1.4",
         "drush/drush": "^9.7",
-        "drupal/metatag": "^1.11"
+        "drupal/metatag": "^1.11",
+        "drupal/eva": "^2.0"
     },
     "replace": {
         "drupal/core": "^8.7"
