--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.header_slideshow.default.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/core.entity_form_display.node.header_slideshow.default.yml
@@ -3,10 +3,12 @@ langcode: de
 status: true
 dependencies:
   config:
+    - field.field.node.header_slideshow.field_par_slideshow
     - field.field.node.header_slideshow.field_sl_image
     - node.type.header_slideshow
   module:
     - field_collection
+    - paragraphs
     - path
 id: node.header_slideshow.default
 targetEntityType: node
@@ -15,12 +17,24 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_par_slideshow:
+    type: entity_reference_paragraphs
+    weight: 1
+    settings:
+      title: Seitenabschnitt
+      title_plural: Seitenabschnitte
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    region: content
   field_sl_image:
-    weight: 32
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: field_collection_embed
@@ -34,7 +48,7 @@ content:
     region: content
   node_class:
     type: string_textfield
-    weight: 35
+    weight: 9
     region: content
     settings:
       size: 60
@@ -42,7 +56,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -50,26 +64,26 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 5
     third_party_settings: {  }
     region: content
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 121
+    weight: 10
     third_party_settings: {  }
     region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 6
     third_party_settings: {  }
     region: content
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     settings:
       size: 60
       placeholder: ''
@@ -77,7 +91,7 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
